Add dR results for test problem

--- a/prelim/content/dR.tex
+++ b/prelim/content/dR.tex
@@ -109,7 +109,8 @@ However, it is useful to consider the a modified version of the equation where i
   -\int_{4\pi}\int_0^\infty\psi^+\delta H\psi dEd\hat{\Omega}.
 \end{equation}
 This results in $\delta R$ being a function of position.
-$\delta R\left(\vec{r}\right)$ is defined as the perturbation in the detector response given a perturbation in cross sections ($\delta H$) that only occurs at point $\vec{r}$.
+$\delta R\left(\vec{r}_0\right)$ is defined as the perturbation in the detector response given a perturbation in cross sections ($\delta H$) that only occurs at point $\vec{r}_0$.
+The vector quantity $\delta R\left(\vec{r}\right)$ is constructed by calculating $\delta R\left(\vec{r}_0\right)$ for all values of $\vec{r}_0$.
 
 Expanding the operator notation yields
 \begin{multline}\label{eq:dr:dr_pos_expand}
