--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -179,11 +179,11 @@
                  Kevin Sheppard and Tyler Reddy and Warren Weckesser and Hameer
                  Abbasi and Christoph Gohlke and Travis E. Oliphant},
     year      = {2020},
-    month     = {sep},
+    month     = {September},
     journal   = {Nature},
     volume    = {585},
     number    = {7825},
-    pages     = {357--362},
+    pages     = {357-362},
     doi       = {10.1038/s41586-020-2649-2},
     publisher = {Springer Science and Business Media {LLC}},
     url       = {https://doi.org/10.1038/s41586-020-2649-2}
